# HcControls

./: .gitignore  README.md
HcControls/: CMakeLists.txt  HcControls.rar
HcControls/.cmake/: version_dll.rc.in  version_exe.rc.in
HcControls/1/: HcFrameless.cpp  HcFrameless.h  HcTreeModel.cpp  HcTreeModel.h
HcControls/1/qml/Controls/: Constants.qml  HcAcrylic.qml  HcAppBar.qml  HcButton.qml  HcComboBox.qml  HcContentPopup.qml  HcDatePicker.qml  HcFlipView.qml  HcGroupBox.qml  HcHeaderRectangle.qml  HcImageButton.qml  HcInfoBar.qml  HcLogin.qml  HcMenuItem.qml  HcMenuSeparator.qml  HcMessageDlg.qml  HcPopup.qml  HcProgressRing.qml  HcRadioButton.qml  HcSheet.qml  HcSlider.qml  HcTableView.qml  HcTextButton.qml  HcTimePicker.qml  HcToggleSwitch.qml  HcWindow.qml  HcWindowDialog.qml  qmldir
HcControls/1/qml/Controls/HcPcrControls/: HcPcr.qml
HcControls/HcControls/: CMakeLists.txt
HcControls/HcControls/.cmake/: version_dll.rc.in
HcControls/HcControls/Qt6/imports/HcControls/Controls/: HcCheckBox.qml  HcContentPopup.qml.autosave.oLvzBF  HcFaultDialog.qml  HcFaultDialog.qml.HtTXLI  HcIconButton.qml  HcRouter.qml  HcScrollablePage.qml  HcSimplifiedPagination.qml  HcText.qml  HcTreeView.qml  HcTreeView.qml.XmKSGI  qmldir
HcControls/HcControls/Qt6/imports/HcControls/Controls/HcPcrControls/: HcPcrStage.qml  HcPcrStage.qml.autosave.monOQk
HcControls/HcControls/qml/Controls/: HcCarousel.qml  HcChart.qml  HcClip.qml  HcColorPicker.qml  HcMenuBar.qml  HcMenuBarItem.qml  HcPagination.qml  HcProgressBar.qml  HcRangeSlider.qml  HcRoundedRectangle.qml  HcRouter.qml
HcControls/HcControls/qml/Controls/HcPcrControls/: HcPcr.qml  HcPcrHelper.qml  HcPcrStage.qml  HcPcrStep.qml
HcControls/action-cli/: InstallerScript.iss
HcControls/example/: CMakeLists.txt
HcControls/package/: InstallerScript.iss
HcControls/src/: CMakeLists.txt
HcControls/src/cpp/: Def.h  HcFileOp.cpp
HcControls/src/qml/Controls/: Constants.qml  HcButton.qml  HcCardPopupDlg.qml  HcComboBox.qml  HcFaultDialog.qml  HcIconButton.qml  HcMessageDlg.qml  HcPagination.qml  HcShadow.qml  HcTableView.qml  HcTextInput.qml
HcControls/src/qml/Controls/HcPcrControls/: HcPcrStep.qml
HcControls/test/: CMakeLists.txt  HcButtonWindow.qml  HcDialogWindow.qml  HcPaginationWindow.qml  HcPcrWindow.qml  HcTableViewWindow.qml  Main.qml  Version.h  main.cpp  test_en_US.qm  test_en_US.ts  test_zh_CN.qm  test_zh_CN.ts
HcControls/test/content/: HcFrame.qml
HcControls/test/qml/: Main.qml
HcControls/test/qml/window/: HcButtonWindow.qml  HcCalendarWindow.qml  HcChartWindow.qml  HcDialogWindow.qml  HcExtraWindow.qml  HcFlipViewWindow.qml  HcFrameWindow.qml  HcInitializrWindow.qml  HcMenuWindow.qml  HcPaginationWindow.qml  HcPcrWindow.qml  HcPickerWindow.qml  HcProgressWindow.qml  HcSettingWindow.qml  HcSheetWindow.qml  HcSvgIconWindow.qml  HcTabWindow.qml  HcTableViewWindow.qml  HcTextIconWindow.qml  HcTextInputWindow.qml  HcTreeViewWindow.qml
HcControls/test/qml/window/chart/: HcBarChartWindow.qml  HcBubbleChartWindow.qml  HcLineChartWindow.qml  HcPieChartWindow.qml  HcPolarChartWindow.qml  HcRadarChartWindow.qml  HcScatterChartWindow.qml
HcControls/test/res/template/: CMakeLists.txt.in
HcControls/test/src/: main.cpp
HcControls/test/src/helper/: InitializrHelper.cpp  TranslateHelper.cpp  TranslateHelper.h
